tooling/nargo_cli/tests/snapshots/compile_failure/turbofish_generic_count/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused function foo
   ┌─ src/main.nr:13:4
   │
13 │ fn foo<T>(bar: Bar<T>) {
   │    --- unused function
   │

error: Expected 1 generic from this function, but 2 were provided
   ┌─ src/main.nr:20:12
   │
20 │     assert(bar1.zeroed::<u32, Field>() == 0);
   │            ---------------------------
   │

Aborting due to 1 previous error
